--- a/client/.babelrc
+++ b/client/.babelrc
@@ -1,7 +1,6 @@
 {
   "plugins": ["transform-class-properties"],
   "presets":[
-        "es2015", "react"
+        "es2015", "react", "stage-0"
     ]
 }
-
